# VizParallelTermProject

./: .gitignore  CMakeLists.txt  README.md
ecse/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  MidiAnalysis.cpp  MidiAnalysis.h  MidiGraphicsView.cpp  MidiGraphicsView.h  MidiNoteGraphicsItem.cpp  MidiNoteGraphicsItem.h  NoteInfo.cpp  NoteInfo.h  PianoRollPiAxis.cpp  PianoRollPiAxis.h  PianoRollPitchAxis.cpp  PianoRollPitchAxis.h  PianoRollScene.cpp  PianoRollScene.h  PianoRollTimeAxis.cpp  PianoRollTimeAxis.h  PianoRollView.cpp  PianoRollView.h  Scrubber.cpp  Scrubber.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/include/: Analysis.h
lib/midi_analysis/: AdjacencyList.cpp  AdjacencyList.h  WeightedBipartiteGraph.h  WeightedBipartiteGraph.inl  analysis.cpp  analysis.h  misc.cpp  misc.h  tempo.cpp
midi_files/: ChopinOp150posth1.mid  ChopinOp150posth2.mid  ChopinOp25No1_choppy1.mid  ChopinOp25No1_choppy2.mid  KassTheme1.mid  SchubertImpNo2_choppy1.mid  SchubertImpNo2_choppy2.mid  f_lydian1.mid  f_lydian2.mid  test1.mid  test2.mid
src/: main.cpp
